src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto+Slab&display=swap');

:root{
  --primary-font: 'Roboto Slab', serif;
  --secondary-font: 'Roboto Condensed', sans-serif;
  --accent-color:#6C63FF;
}

*{
  box-sizing: border-box !important;
  margin: 0em;
  padding: 0em;
}

.accent{
  color:#6C63FF;
}

html, body, div#root{
  min-height: 100vh !important;
  font-family: var(--secondary-font);
  background: #e0e0e0;

}


div.main{
  min-height: 100vh;
  width: 40%;
  background-color:#f4f4f4;  
  opacity: 0.9;
  background: linear-gradient(rgba(255,255,255,0.85),rgba(255,255,255,0.85)) , url(./imgs/bitcoin.svg) no-repeat ;
  background-position:center;
  background-size: cover;

}

h1.header{
  border-bottom: 2px solid #c4c4c4;
}

span#rupee-icon{
  color:#6C63FF !important;
}

h5{
  font-weight: 380;
}

button#btn-reset ,button#btn-reset:focus  {
  color: #4a42b8 !important;
  padding: 0;
  border: none;
  background:inherit;
  box-shadow: none;
  font-size: 1.2rem;
}

button#btn-reset:active {
  transform: rotate(45deg);
   box-shadow: none;
}


div.balance-spent{
  display: grid;
  grid-template-columns: 1fr 1fr;
  border: 2px solid #c4c4c4;
  border-radius: 5px;
  height: 60px;
  align-items: center;
  text-align: center;
}

div.balance-spent h5{
  border-left: 1px solid  #c4c4c4;
  border-right: 1px solid #c4c4c4;
  vertical-align: middle;
}

div.counter{
  padding-bottom: 0.3rem;
  margin-bottom: 1rem;
  border-bottom: 2px solid #c4c4c4;
}

div.transaction-item{
  display: grid;
  grid-template-columns: 1fr;
  height:50px;
  margin-bottom: 5px;
  border: 1px solid #c4c4c4;
  border-radius: 5px;
}

div.transaction-list{
  max-height: 250px;
  overflow: auto;
  border-bottom: 2px solid #6C63FF;
  padding-bottom: 5px;
}

a.btn-remove{
  padding: 0;
}

p#id , div#expense-alert , div#balance-alert{
  margin: 0;
  padding: 0;
}


div.input-group , .form-control{
  color: black !important;
}

@media(max-width:800px){
  
  div.main{
    width: 85%;
  }

}

